tests/invalid/type_mismatch/main.py
def run_case() -> None:
    x: int = 5

    y: float = x

if __name__ == "__main__":
    run_case()
